@@ -20,26 +20,33 @@
 \usage{
 setClass(Class, representation, prototype, contains=character(),
          validity, access, where, version, sealed, package,
-         S3methods = FALSE)
+         S3methods = FALSE, slots)
 }
 \arguments{
   \item{Class}{character string name for the class.}
-  \item{representation}{a named \code{\link{list}} of the slots that the
-    new class should have, the names giving the names of the slots and
-    the corresponding elements being the character string names of  the
-    corresponding classes.  Usually a call to the
-    \code{\link{representation}} function.
+  \item{slots}{ a named list or named character vector.
+    The names are the names of the slots in the new class and
+    the elements are the character string names of  the
+    corresponding classes.
 
-    Backward compatibility and compatibility with S-Plus allows unnamed
-    elements for superclasses, but the recommended style is to use the
-    \code{contains=} argument instead.}
+    In rare cases where there is ambiguity about the class of a slot,
+    because two classes of the same name are imported from different
+    packages, the corresponding element of the argument must have a
+    \code{"package"} attribute to disambiguate the choice.
+
+    It is allowed to provide an unnamed character vector as a limiting
+    case, with the elements taken as slot names and all slots having
+    the unrestricted class \code{"ANY"}.
+
+    }
+  \item{contains}{ the names (and optionally package slots) for the
+    \emph{superclasses} of this class.  The special superclass
+    \code{"VIRTUAL"} causes the new class to be created as a
+    virtual class; see the section on virtual classes in \link{Classes}.}
   \item{prototype}{ an object providing the default
     data for the slots in this class.  By default, each will be the
     prototype object for the superclass.  If provided, using a call to
     \code{\link{prototype}} will carry out some checks. }
-  \item{contains}{ the names (and optionally package slots) for the
-    \emph{superclasses} of this class.  Use \code{"VIRTUAL"} to define a
-    virtual class.}
   \item{where}{ the environment in which to store the definition.
     Should not be supplied in standard use.  For calls to
     \code{setClass()} appearing in the source code for a package, will
@@ -51,7 +58,20 @@ setClass(Class, representation, prototype, contains=character(),
     its argument is a valid object of this class and one or more strings
     describing the failures otherwise).  See \code{\link{validObject}}
     for details.}
-  \item{access, version}{access and version, included for
+  \item{S3methods, representation, access, version }{ All these
+      arguments are deprecated from version 3.0.0 of \R and should be
+      avoided.
+      
+      \code{S3methods} is a flag indicating that old-style methods
+      will be written involving this class.  Modern versions of \R
+      attempt to match formal and old-style methods consistently, so
+      this argument is largely irrelevant.
+
+      \code{representation} is an argument inherited from S that
+      included both \code{slots} and \code{contains}, but the use of
+      the latter two arguments is clearer and recommended.
+
+      \code{access} and \code{version} are included for
       historical compatibility with S-Plus, but ignored.}
   \item{sealed}{ if \code{TRUE}, the class definition will be sealed,
     so that another call to \code{setClass} will fail on this class name.
@@ -59,15 +79,6 @@ setClass(Class, representation, prototype, contains=character(),
   \item{package}{ an optional package name for the class.  Should very
       rarely be used. By default
     the name of the package in which the class definition is assigned.
-  }
-  \item{S3methods}{if \code{TRUE}, S3 methods may be written for this
-    class.  S3 generic functions and primitives will dispatch an S3
-    method defined for this class, given an S4 object from the class or
-    from a subclass of it, provided no S4 method and no more direct S3
-    method is found.  This argument should rarely be used:
-    It is not needed for classes that are defined via
-    \code{\link{setOldClass}} or for classes that extend such classes,
-    which will nearly always be the case when S3 methods are relevant.
   }
 }
 
@@ -94,7 +105,7 @@ setClass(Class, representation, prototype, contains=character(),
 }
 \section{Basic Use: Slots and Inheritance}{
 The two essential arguments other than the class name are
-\code{representation} and \code{contains}, defining the explicit slots
+\code{slots} and \code{contains}, defining the explicit slots
 and the inheritance (superclasses). Together, these arguments define
 all the information in an object from this class; that is, the names
 of all the slots and the classes required for each of them.
@@ -105,7 +116,7 @@ inheritance information specifies which methods apply indirectly,
 through inheritance.  See \link{Methods}.
 
 The slots in a class definition will be the union of all the slots
-specified directly by \code{representation} and all the slots in all
+specified directly by \code{slots} and all the slots in all
 the contained classes.
 There can only be one slot with a given name; specifically, the
 direct and inherited slot names must be unique.
@@ -118,10 +129,7 @@ object types or one of a few other special \R types (\code{matrix} and
 See the section on inheriting from object types, below.
 
 
-  Slot name \code{"class"} is not allowed in the current implementation but
-  reserved. \code{"Class"} is valid, but undesirable, as it cannot be
-  used in \code{\link{new}(<cl>, Class = <slot-value>)} (because of
-  argument name matching).
+  Slot names \code{"class"} and \code{"Class"} are not allowed.
   There are other slot names with a special meaning; these names start with
   the \code{"."} character.  To be safe, you should define all of
   your own slots with names starting with an alphabetic character.
@@ -251,13 +259,13 @@ This should be a rare occurrence.
 }
 ## A simple class with two slots
 track <- setClass("track",
-         representation(x="numeric", y="numeric"))
+         slots = c(x="numeric", y="numeric"))
 ## an object from the class
 t1 <- track(x = 1:10, y = 1:10 + rnorm(10))
 
 ## A class extending the previous, adding one more slot
 trackCurve <- setClass("trackCurve",
-    representation(smooth = "numeric"),
+    slots = c(smooth = "numeric"),
     contains = "track")
 
 ## an object containing a superclass object
@@ -266,21 +274,21 @@ t1s <- trackCurve(t1, smooth = 1:10)
 ## A class similar to "trackCurve", but with different structure
 ## allowing matrices for the "y" and "smooth" slots
 setClass("trackMultiCurve",
-         representation(x="numeric", y="matrix", smooth="matrix"),
+         slots = c(x="numeric", y="matrix", smooth="matrix"),
          prototype = list(x=numeric(), y=matrix(0,0,0),
                           smooth= matrix(0,0,0)))
 ## See ?setIs for further examples using these classes
 
 ## A class that extends the built-in data type "numeric"
 
-numWithId <- setClass("numWithId", representation(id = "character"),
+numWithId <- setClass("numWithId", slots = c(id = "character"),
          contains = "numeric")
 
 numWithId(1:3, id = "An Example")
 
 ## inherit from reference object of type "environment"
 stampedEnv <-setClass("stampedEnv", contains = "environment",
-      representation(update = "POSIXct"))
+      slots = c(update = "POSIXct"))
 setMethod("[[<-", c("stampedEnv", "character", "missing"),
    function(x, i, j, ..., value) {
        ev <- as(x, "environment")
@@ -302,7 +310,7 @@ nrow(new("myMatrix")) # 0
 nrow(new("matrix")) # 1
 ## simple test of prototype data
 xxx <- stats::rnorm(3)
-setClass("xNum", representation(x = "numeric"), prototype = list(x = xxx))
+setClass("xNum", slots = c(x = "numeric"), prototype = list(x = xxx))
 stopifnot(identical(new("xNum")@x, xxx))
 
 removeClass("xNum")
